# resume

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: generate_pdf.yml
resume/: main.py
resume/builder/: mappers.py  models.py  services.py
resume/templates/: resume.html
