[tool.poetry]
name = "resume"
version = "1.0.0"
description = "Get to know me in this resume repository. My experience, projects, certification and more. PDF available."
authors = ["Lukasz Zmudzinski <lukasz@zmudzinski.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.3"
pdfkit = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
mypy = "^1.8.0"

[tool.ruff]
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[[tool.mypy.overrides]]
module = "pdfkit"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
